# jsonl5

./: README.md  pyproject.toml
.github/workflows/: pr-check.yml  publish.yml
jsonl5/: __init__.py  jsonl5.py
tests/: test_version.py
