[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonl5"
version = "0.1.0"
description = "A Python library wrapping json5 for working with JSONL5 (JSON5 Lines) files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "yuyi2439" }]
keywords = ["jsonl5", "json-lines", "ndjson", "json5"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "json5>=0.10"
]

[project.urls]
Homepage = "https://github.com/yuyi2439/jsonl5"
Repository = "https://github.com/yuyi2439/jsonl5"
Issues = "https://github.com/yuyi2439/jsonl5/issues"

[tool.hatch.build.targets.wheel]
packages = ["jsonl5"]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.11",
]
